# Lexer-in-C

./: CMakeLists.txt  README.md  download_dependencies.sh
include/: Lexer.h
src/: Lexer.c
